fixed auth page + added internal logic without localstorage saving
